--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron" style="color: white;background: url('./assets/bg5.jpg');background-size: cover;">
+<div class="jumbotron" style="color: white;background: url('./assets/bg5.jpg');background-size: cover; height: fit-content;">
     <div class="row">
         <div class="col-md-6">
             <h1>You may find what you Seek!</h1>
@@ -6,9 +6,9 @@
         </div>
         <div class="col-md-6"></div>
         <div class="col-md-6">
-            <input type="text" class="form-control" placeholder="Search" style="width:80%; margin-left: 0px;">
+            <input type="text" class="form-control" placeholder="type here.." style="width:80%; margin-left: 0px;">
 
-            <button class="btn" type="submit" style="width:20%;">Search</button>
+            <button class="btn" type="submit" style="width:fit-content;">Search</button>
         </div>
     </div>
 </div>
