--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,24 +1,26 @@
 .jumbotron{
-    height: 80vh;
-   // background-color: transparentize($color: #000000, $amount: .8) ;
+    padding-top: 10%;
+    padding-bottom: 15%;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     border:none;
+    
  
 }
 .btn:hover{
-    box-shadow: 0 0 5px white;
+    box-shadow: darken($color: #000000, $amount: 0.8);
+    opacity: 0.8;
 }
 .btn:focus{
-    box-shadow: none;
+    box-shadow: darken($color: #000000, $amount: 0.8);
     opacity: 0.8; 
     
 }
 .btn{
 
     border:none;
-    color: #1e1e1e;
+    color: white;
     opacity: 0.6;
-    background: white;
+    background: #1e1e1e;
     margin-top: 5px;
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     border-radius: 2rem;
@@ -45,4 +47,6 @@ input{
     border-width: 3px;
     border-color: white;
     border-radius: 2rem;
+    width: fit-content;
+    padding: auto 3cm auto 3cm;
 }
