--- a/src/app/components/trainer-register/trainer-register.component.html
+++ b/src/app/components/trainer-register/trainer-register.component.html
@@ -9,12 +9,26 @@
                 <div class="form-group col-md-6">
                     <label for="trainer_fname">First name</label>
                     <input type="text" class="form-control" [(ngModel)]="firstName" name="firstName"
-                        placeholder="First name" required>
+                        placeholder="First name" required #fname="ngModel">
+
+                    <div *ngIf="fname.invalid && (fname.dirty || fname.touched)" class="alert alert-danger">
+                        <div *ngIf="fname.errors?.required">
+                            Firstname is required.
+                        </div>
+                    </div>
+
                 </div>
                 <div class="form-group col-md-6">
                     <label for="trainer_lname">Last name</label>
                     <input type="text" class="form-control" [(ngModel)]="lastName" name="lastName"
-                        placeholder="Last name" required>
+                        placeholder="Last name" required #lname="ngModel">
+
+                        <div *ngIf="lname.invalid && (lname.dirty || lname.touched)" class="alert alert-danger">
+                            <div *ngIf="lname.errors?.required">
+                                L   astname is required.
+                            </div>
+                        </div>
+                        
                 </div>
             </div>
             <div class="row">
